Change name app

--- a/app/assets/tpl/partials/sidebar.html
+++ b/app/assets/tpl/partials/sidebar.html
@@ -5,7 +5,8 @@
   
   <ul ng-cloak>
     <a menu-link href="#/dashboard" icon="md md-blur-on">Dashboard</a>
-    <a menu-link href="#/apps/crud" icon="md md-blur-on" name="Crud">Crud</a>
+    <a menu-link href="#/apps/crud" icon="md md-blur-on" name="Crud">Websites</a>
+    <a menu-link href="#/apps/crud" icon="md md-blur-on" name="Crud">Databases</a>
     <!--li menu-toggle path="/forms" name="Forms" icon="md md-input">
       <a menu-link href="#/forms/basic">Basic forms</a>
       <a menu-link href="#/forms/advanced">Advanced elements</a>
@@ -15,6 +16,6 @@
       <a menu-link href="#/tables/basic">Basic tables</a>
       <a menu-link href="#/tables/data">Data tables</a>
     </li> -->
-    <a menu-link href="#/plugins/demo2" icon="md md-blur-on">Plugin</a>
+    <a menu-link href="#/plugins/demo2" icon="md md-blur-on">Files</a>
   </ul>
 </aside>
